--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,24 @@
   padding: 0;
   margin: 0;
 }
+
+
+.btn{
+  display:inline-flex;
+  padding: 5px 10px;
+  @apply bg-trinityBlue text-[#0074C1] font-semibold rounded;
+}
+
+.btn--sm{
+  @apply text-xs;
+}
+
+.btn--danger{
+  @apply bg-[#FB0000] text-white;
+}
+.btn--info{
+  @apply  text-white;
+}
+.btn--success{
+  @apply bg-green-500 text-white;
+}
