included id with hidden input

--- a/src/app/Pages/plumber/plumber.component.html
+++ b/src/app/Pages/plumber/plumber.component.html
@@ -39,6 +39,7 @@
                         <button class="btn btn--info btn--sm" *ngIf="editMode" (click)="turnOffEditMode()" >Cancel</button>
                     </div>
                 </td>
+                <input type="hidden" name="_id" value = "jibberish">
             </tr>
         </tbody>
     </table>
