updated router link for routes and active state

--- a/src/app/Pages/dashboard/dashboard.component.html
+++ b/src/app/Pages/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <section>
     <div class="dashboard-wrapper flex min-h-3/4">
         <div class="sidebar w-[250px] border-trinityBlue border-r h-[80vh] flex justify-start p-4 flex-col">
-            <h1 class="text-5xl font-thin text-gray-400">HI {{"Kevin"}}</h1>
+            <h1 class="text-5xl font-thin text-gray-400 text-end">HI {{"Kevin"}}</h1>
             <ul class="flex flex-col text-gray-400 font-thin p-6 gap-3 pl-28 mt-20 ">
-                <li><a class="link">PLUMBER</a></li>
-                <li><a class="link">PRODUCT</a></li>
-                <li><a class="link">TICKET</a></li>
-                <li><a class="link">ORDER</a></li>
+                <li routerLink="plumbers" routerLinkActive="active"><a class="link">PLUMBERS</a></li>
+                <li routerLink="products" routerLinkActive="active"><a class="link">PRODUCTS</a></li>
+                <li routerLink="tickets" routerLinkActive="active"><a class="link">TICKETS</a></li>
+                <li routerLink="orders" routerLinkActive="active"><a class="link">ORDERS</a></li>
             </ul>
         </div>
         <div class="content-wrapper flex-grow">
