--- a/src/app/Pages/product/product.component.html
+++ b/src/app/Pages/product/product.component.html
@@ -1,4 +1,4 @@
-<section>
+<!-- <section>
     <table class="w-full">
         <thead>
             <tr>
@@ -14,8 +14,11 @@
             </tr>
         </thead>
         <tbody #editableForms>
+         -->
             <!-- Tells angular to add the class with same name once editMode is true -->
-            <tr [class]="{editMode}" *ngFor="let plumber of plumbers">
+
+<!--             
+            <tr [class]="{editMode}" *ngFor="let plumber of products">
                 <td class="text-center">
                     <input type="checkbox" class="text-trinityBlue h-6 w-6">
                 </td>
@@ -44,4 +47,4 @@
         </tbody>
     </table>
 
-</section>
+</section> -->
