--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -7,7 +7,7 @@ header {
   justify-content: space-between;
   align-items: flex-start;
   font-family: "Inter", sans-serif;
-  box-shadow: 0px 3px 20px 5px rgba(0, 0, 0, 0.25);
+  border-bottom: 1.5px solid #70ceee;
 }
 
 // Logo styling
