added blue box shadow

--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -1,24 +1,26 @@
-<div class="main-container">
-  <div class="log">
-    <div class="header">
-      <h4>SIGN IN</h4>
-      <i class="fa-light fa-xmark-large"></i>
-      <h2 style="margin-left: 30em">
-        <img src="..\assets\img\svg\Group 31.svg" alt="" srcset="" />
-      </h2>
-    </div>
-
-    <form>
-      <label for="email">Email</label><br />
-      <input type="email" id="email" name="email" /><br />
-
-      <label for="password">Password</label><br />
-      <input type="text" id="password" name="password" /><br />
-
-      <div class="buwrapper">
-        <button class="button button1">sign in</button>
-        <button class="button button2">create user</button>
+<div class="border">
+  <div class="main-container">
+    <div class="log">
+      <div class="header">
+        <h4>SIGN IN</h4>
+        <i class="fa-light fa-xmark-large"></i>
+        <h2 style="margin-left: 30em">
+          <img src="..\assets\img\svg\Group 31.svg" alt="" srcset="" />
+        </h2>
       </div>
-    </form>
+
+      <form>
+        <label for="email">Email</label><br />
+        <input type="email" id="email" name="email" /><br />
+
+        <label for="password">Password</label><br />
+        <input type="text" id="password" name="password" /><br />
+
+        <div class="buwrapper">
+          <button class="button button1">sign in</button>
+          <button class="button button2">create user</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
