added border to top of dashboard pages

--- a/src/app/Pages/dashboard/dashboard.component.html
+++ b/src/app/Pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="dashboard-wrapper flex min-h-3/4">
+    <div class="dashboard-wrapper flex min-h-3/4 border-t border-trinityBlue">
         <div class="sidebar w-[250px] border-trinityBlue border-r h-[80vh] flex justify-start p-4 flex-col">
             <h1 class="text-5xl font-thin text-gray-400 text-end">HI {{"Kevin"}}</h1>
             <ul class="flex flex-col text-gray-400 font-thin p-6 gap-3 pl-28 mt-20 ">
