--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,13 +1,12 @@
 header {
   background: #ffffff;
   max-height: 25vh;
-  width: 100vw;
+  width: 100%;
   padding-bottom: 1.5%;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   font-family: "Inter", sans-serif;
-  border-bottom: 1.5px solid #70ceee;
 }
 
 // Logo styling
