--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -3,22 +3,42 @@
     <div class="log">
       <div class="header">
         <h4>SIGN IN</h4>
+
         <i class="fa-light fa-xmark-large"></i>
         <h2 style="margin-left: 30em">
           <img src="..\assets\img\svg\Group 31.svg" alt="" srcset="" />
         </h2>
       </div>
 
-      <form>
-        <label for="email">Email</label><br />
-        <input type="email" id="email" name="email" /><br />
+      <form action="/action_page.php">
 
-        <label for="password">Password</label><br />
-        <input type="text" id="password" name="password" /><br />
+        <div class="form-group">
+          <label for="email">Email</label><br />
+          <input
+         
+            type="email"
+            id="email"
+            name="email"
+            
+            required
+          /><br />
+        </div>
+
+        <div class="form-group">
+          <label for="password">Password</label><br />
+          <input
+          
+            type="password"
+            id="password"
+            name="password"
+            
+            required
+          /><br />
+        </div>
 
         <div class="buwrapper">
-          <button class="button button1">sign in</button>
-          <button class="button button2">create user</button>
+          <button type="submit"  class="button button1">sign in</button>
+          <button  type="submit"  class="button button2">create user</button>
         </div>
       </form>
     </div>
