--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+//  To apply this font type this for the property ---->  font-family: "Inter", sans-serif;
 
 * {
   box-sizing: border-box;
