--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <router-outlet></router-outlet>
 <app-header></app-header>
+<app-checkout-form></app-checkout-form>
 <!-- <app-footer></app-footer> -->
