routing for checkout page and fixed stepper

--- a/src/app/Components/checkout-form/checkout-form.component.html
+++ b/src/app/Components/checkout-form/checkout-form.component.html
@@ -47,7 +47,7 @@
         <div class="radio-cont">
           <mat-radio-group
             aria-label="Select an option"
-            formControlName="confirm"
+            formControlName="cardType"
             class="mat-radio-vert"
           >
             <mat-radio-button value="visa">Visa</mat-radio-button>
