--- a/src/app/Components/checkout-form/checkout-form.component.scss
+++ b/src/app/Components/checkout-form/checkout-form.component.scss
@@ -25,13 +25,18 @@ mat-stepper{
 }
 
 .form-flex{
+  width: 100%;
   display: flex;
-  align-items: center;
+  align-items: baseline;
   gap: 1rem;
 }
 
 .errors {
   color: red;
   font-size: .75em;
+}
+
+.mat-form-field{
+  width: 100%;
 }
 
