--- a/src/app/Components/product-modal/product-modal.component.html
+++ b/src/app/Components/product-modal/product-modal.component.html
@@ -5,15 +5,14 @@
     
     <div class="h-full flex flex-col">
         <div class="text-center">
-            <h1 class="text-3xl font-bold text-[#005DA4] py-2">1 Inch valve water pump {{data}}</h1>
+            <h1 class="text-3xl font-bold text-[#005DA4] py-2">{{data.name}}</h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, pariatur. Voluptatum officia porro vero tenetur culpa necessitatibus modi, sint autem perspiciatis totam quo debitis facere non tempora blanditiis! Cupiditate, rerum.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, pariatur. Voluptatum officia porro ve
+                {{data.description}}
             </p>
         </div>
         <div class="flex justify-between items-center px-5 mt-10">
-            <h2 class="font-medium">$2500.00</h2>
-            <h2 class="font-medium">Quantity 5</h2>
+            <h2 class="font-medium">${{data.price}}</h2>
+            <h2 class="font-medium">Quantity </h2>
         </div>
         <div class="flex justify-between text-white mt-auto pb-5">
             <button class="py-2 px-5 bg-blue-500" (click)="check()">
