--- a/src/app/Pages/cart-page/cart-page.component.html
+++ b/src/app/Pages/cart-page/cart-page.component.html
@@ -1,118 +1,123 @@
-<div class="cart-container">
-    <div class="context">
-        <div class="cart-title">
-            <img src="/assets/cartSummary.svg" alt="shows image which tells the title of the page">
-        </div>
-        <div class="cart-grid">
-            <div class="cartItem-grid">
-                <div class="cartItem-wrapper" *ngFor="let item of cartItems">
-                    <div class="cartItem">
-                       <div class="cartItem-sec1">
-                         <div class="cartImg">
-                            <div class="cartItem-img-wrapper">
-                                <!-- <img src="{{item.product.imageUrl}}" alt="Image of item"> -->
+<section>
+    <div class="cart-container max-w-[1440px] m-auto pt-8">
+        <div class="context">
+            <div class="cart-title ">
+
+                <div class="w-1/4 text-trinityBlue font-thin uppercase border-b border-trinityBlue">
+                    Cart Page
+                </div>
+            </div>
+            <div class="cart-grid">
+                <div class="cartItem-grid">
+                    <div class="cartItem-wrapper" *ngFor="let item of cartItems">
+                        <div class="cartItem">
+                           <div class="cartItem-sec1">
+                             <div class="cartImg">
+                                <div class="cartItem-img-wrapper">
+                                    <img src="{{item.product.image}}" alt="Image of item">
+                                </div>
+                                <svg width="48" height="8" viewBox="0 0 48 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M40 4C40 6.20914 41.7909 8 44 8C46.2091 8 48 6.20914 48 4C48 1.79086 46.2091 0 44 0C41.7909 0 40 1.79086 40 4ZM0 4.75H44V3.25H0V4.75Z" fill="#6D6D6D"/>
+                                    </svg>
                             </div>
-                            <svg width="48" height="8" viewBox="0 0 48 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M40 4C40 6.20914 41.7909 8 44 8C46.2091 8 48 6.20914 48 4C48 1.79086 46.2091 0 44 0C41.7909 0 40 1.79086 40 4ZM0 4.75H44V3.25H0V4.75Z" fill="#6D6D6D"/>
-                                </svg>
-                        </div>
-                        <p class="name">
-                            <!-- {{item.product.name}} -->
-                            
-                        </p>
-                       </div>
-                        <div class="cartItem-sec2">
-                            <div class="quantity">
-                                <span class="count">{{item.quantity}}</span>
-                                <div class="qantity-ctrls">
-                                    <button class="increase" (click)="increaseQty(item)">
-                                        <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <circle cx="9.5" cy="9.5" r="9.5" fill="#6D6D6D"/>
-                                            <path d="M3.12983 9.17016L14.8745 9.17018" stroke="white" stroke-width="2"/>
-                                            <path d="M9.05299 3.35418L9.05302 15.0453" stroke="white" stroke-width="2"/>
-                                            </svg>
-                                    </button>
-                                    <button class="decrease" (click)="decreaseQty(item)">
-                                        <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <circle cx="9.5" cy="10.1998" r="9.5" fill="#6D6D6D"/>
-                                            <path d="M3.12983 9.86999L14.8745 9.87001" stroke="white" stroke-width="2"/>
-                                            </svg>
-                                            
-                                    </button>
+                            <p class="name">
+                                {{item.product.name}}
+                                
+                            </p>
+                           </div>
+                            <div class="cartItem-sec2">
+                                <div class="quantity">
+                                    <span class="count">{{item.quantity}}</span>
+                                    <div class="qantity-ctrls">
+                                        <button class="increase" (click)="increaseQty(item)">
+                                            <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <circle cx="9.5" cy="9.5" r="9.5" fill="#6D6D6D"/>
+                                                <path d="M3.12983 9.17016L14.8745 9.17018" stroke="white" stroke-width="2"/>
+                                                <path d="M9.05299 3.35418L9.05302 15.0453" stroke="white" stroke-width="2"/>
+                                                </svg>
+                                        </button>
+                                        <button class="decrease" (click)="decreaseQty(item)">
+                                            <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <circle cx="9.5" cy="10.1998" r="9.5" fill="#6D6D6D"/>
+                                                <path d="M3.12983 9.86999L14.8745 9.87001" stroke="white" stroke-width="2"/>
+                                                </svg>
+                                                
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
+                            <div class="cartItem-sec3">
+                                <p>{{ cartService.getCartItemPrice(item) | currency: "JMD "}}
+                                   
+                                </p>
+                            </div>
                         </div>
-                        <div class="cartItem-sec3">
-                            <p>{{ cartService.getCartItemPrice(item) | currency: "JMD "}}
-                               
-                            </p>
-                        </div>
-                    </div>
-                    <div class="closeIcon">
-                        <button (click)="removeItem(item.id)">
-                            <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M0.828959 1L17.171 17.3421" stroke="#6D6D6D" stroke-width="2"/>
-                                <path d="M17.1632 1.14907L0.89565 17.4167" stroke="#6D6D6D" stroke-width="2"/>
-                                </svg>
-                        </button>
-                    </div>
-                </div>
-                <div class="cartItem-footer">
-                    <div class="subtotal">
-                        <p>SubTotal: <span class="bold">{{cartService.getCartTotal()| currency}}</span></p>
-                    </div>
-                    <div class="cta">
-                        <button class="back" (click)="goBack()">
-                            <span>
-                                <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <g clip-path="url(#clip0_307_209)">
-                                    <path d="M31.4286 17.1414L32.3586 17.1414C32.7114 17.1414 33 16.8528 33 16.5C33 16.1472 32.7114 15.8586 32.3586 15.8586L31.4286 15.8586C31.0758 15.8586 30.7872 16.1472 30.7872 16.5C30.7872 16.8528 31.0758 17.1414 31.4286 17.1414Z" fill="black"/>
-                                    <path d="M0.192336 16.949L12.6996 29.4563C12.9562 29.7128 13.341 29.7128 13.5976 29.4563C13.8541 29.1997 13.8541 28.8149 13.5976 28.5583L2.18068 17.1414L28.5422 17.1414C28.895 17.1414 29.1836 16.8528 29.1836 16.5C29.1836 16.1472 28.895 15.8586 28.5422 15.8586L2.18068 15.8586L13.5976 4.44169C13.8541 4.18513 13.8541 3.80029 13.5976 3.54373C13.4693 3.41545 13.309 3.35131 13.1486 3.35131C12.9883 3.35131 12.8279 3.41545 12.6996 3.54373L0.192336 16.051C-0.0642231 16.3076 -0.0642231 16.6924 0.192336 16.949Z" fill="black"/>
-                                    </g>
-                                    <defs>
-                                    <clipPath id="clip0_307_209">
-                                    <rect width="33" height="33" fill="white" transform="translate(33 33) rotate(-180)"/>
-                                    </clipPath>
-                                    </defs>
+                        <div class="closeIcon">
+                            <button (click)="removeItem(item.id)">
+                                <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0.828959 1L17.171 17.3421" stroke="#6D6D6D" stroke-width="2"/>
+                                    <path d="M17.1632 1.14907L0.89565 17.4167" stroke="#6D6D6D" stroke-width="2"/>
                                     </svg>
-                            </span>
-                            <span>Go Back</span>
-                        </button>
-                        <button class="checkout" routerLink="/checkout">
-                            checkout
-                        </button>
+                            </button>
+                        </div>
                     </div>
-                </div>
-
-            </div>
-            <div class="cartInfo-grid">
-                <div class="cartSummary-grid sharp-bx">
-                    <h2 class="title">Order Summary</h2>
-                    <table class="items">
-                        <thead>
-                            <tr>
-                                <th>Items</th>
-                                <th>Price</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let item of cartItems">
-                                <!-- <td>{{item.quantity}}x {{item.product.name}}</td> -->
-                                <td>{{cartService.getCartItemPrice(item) | currency}}</td>
-                            </tr>
-                        </tbody>                        
-                    </table>
-
-                </div>
-                <div class="paymentInfo-grid sharp-bx">
-                    <h2 class="title">Payments We Accept</h2>
-                    <div class="payMethods">
-                        <img src="/assets/35-351793_credit-or-debit-card-mastercard-logo-visa-card 1.png" alt="">
+                    <div class="cartItem-footer">
+                        <div class="subtotal">
+                            <p>SubTotal: <span class="bold">{{cartService.getCartTotal()| currency}}</span></p>
+                        </div>
+                        <div class="cta">
+                            <button class="back" (click)="goBack()">
+                                <span>
+                                    <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <g clip-path="url(#clip0_307_209)">
+                                        <path d="M31.4286 17.1414L32.3586 17.1414C32.7114 17.1414 33 16.8528 33 16.5C33 16.1472 32.7114 15.8586 32.3586 15.8586L31.4286 15.8586C31.0758 15.8586 30.7872 16.1472 30.7872 16.5C30.7872 16.8528 31.0758 17.1414 31.4286 17.1414Z" fill="black"/>
+                                        <path d="M0.192336 16.949L12.6996 29.4563C12.9562 29.7128 13.341 29.7128 13.5976 29.4563C13.8541 29.1997 13.8541 28.8149 13.5976 28.5583L2.18068 17.1414L28.5422 17.1414C28.895 17.1414 29.1836 16.8528 29.1836 16.5C29.1836 16.1472 28.895 15.8586 28.5422 15.8586L2.18068 15.8586L13.5976 4.44169C13.8541 4.18513 13.8541 3.80029 13.5976 3.54373C13.4693 3.41545 13.309 3.35131 13.1486 3.35131C12.9883 3.35131 12.8279 3.41545 12.6996 3.54373L0.192336 16.051C-0.0642231 16.3076 -0.0642231 16.6924 0.192336 16.949Z" fill="black"/>
+                                        </g>
+                                        <defs>
+                                        <clipPath id="clip0_307_209">
+                                        <rect width="33" height="33" fill="white" transform="translate(33 33) rotate(-180)"/>
+                                        </clipPath>
+                                        </defs>
+                                        </svg>
+                                </span>
+                                <span>Go Back</span>
+                            </button>
+                            <button class="checkout" routerLink="/checkout">
+                                checkout
+                            </button>
+                        </div>
                     </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
     
-</div>
+                </div>
+                <div class="cartInfo-grid">
+                    <div class="cartSummary-grid sharp-bx">
+                        <h2 class="title p">Order Summary</h2>
+                        <table class="items  mx-4">
+                            <thead>
+                                <tr>
+                                    <th>Items</th>
+                                    <th>Price</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let item of cartItems">
+                                    <td>{{item.quantity}}x {{item.product.name}}</td>
+                                    <td>{{cartService.getCartItemPrice(item) | currency}}</td>
+                                </tr>
+                            </tbody>                        
+                        </table>
+    
+                    </div>
+                    <div class="paymentInfo-grid sharp-bx">
+                        <h2 class="title">Payments We Accept</h2>
+                        <div class="payMethods">
+                            <img src="https://raw.githubusercontent.com/aldaineclarke/Amber-Eats-Group25/main/src/assets/35-351793_credit-or-debit-card-mastercard-logo-visa-card%201.png" alt="">
+                        </div>
+                    </div>
+                </div>
+    
+            </div>
+        </div>
+        
+    </div>
+</section>
