added link to cart icon

--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -20,7 +20,9 @@
   <!-- ************ Access links to forms *********** -->
   <div class="form-acc">
     <!-- shopping cart icon -->
-    <span class="cart-cont"
+    <span 
+    class="cart-cont cursor-pointer"
+    routerLink="/cart"
       ><svg
         xmlns="http://www.w3.org/2000/svg"
         width="17"
