--- a/src/app/Pages/ticket/ticket.component.html
+++ b/src/app/Pages/ticket/ticket.component.html
@@ -2,69 +2,46 @@
     <table class="w-full">
         <thead>
             <tr>
-                <th>
-                    <button class="btn btn--danger">DELETE ALL</button>
-                </th>
-                <th>Plumber</th>
-                <th>Email Address</th>
-                <th>Status</th>
-                <th>Phone Number</th>
+                <th>Client Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>Notes</th>
                 <th>Actions</th>
-                <th><button class="rounded-3xl h-10 w-10  bg-trinityBlue inline-flex items-center justify-center text-white" title="Add a new plumber" (click)="toggleCreationMode()"><i class="fa-solid fa-plus"></i></button></th>
+                <th><button class="rounded-3xl h-10 w-10  bg-trinityBlue inline-flex items-center justify-center text-white" title="Add a new plumber" (click)="openDialog()"><i class="fa-solid fa-plus"></i></button></th>
             </tr>
         </thead>
         <tbody #editableForms>
             <!-- Tells angular to add the class with same name once editMode is true -->
-            <tr [class]="{editMode}" *ngFor="let ticket of tickets">
-                <td class="text-center">
-                    <input type="checkbox" class="text-trinityBlue h-6 w-6">
-                </td>
+            <tr *ngFor="let ticket of tickets">
                 <td class="cursor">
                     <input type="text" [value]="ticket.clientName" name="clientName" [disabled]="!editMode" >
                 </td>
                 <td class="cursor">
                     <input type="email" [value]="ticket.clientEmail" name="clientEmail" [disabled]="!editMode">
                 </td>
-                <td class="cursor">
+                <!-- <td class="cursor">
                     <input type="text" [value]="ticket.plumber" name="plumber" [disabled]="!editMode" >
-                </td>
+                </td> -->
                 <td class="cursor">
                     <input type="tel" [value]="ticket.clientPhone" name="clientPhone" [disabled]="!editMode" >
                 </td>
+                <!-- <td class="cursor">
+                    <input type="tel" [value]="ticket.service" name="clientPhone" [disabled]="!editMode" >
+                </td> -->
+                <td class="cursor w-[300px]">
+                    <input type="text" class="w-[90%] bg-white resize-none" [value]="ticket.clientAddress" name="clientPhone" [disabled]="!editMode">
+                </td>
                 <td>
                     <div class="actions flex gap-2">
-                        <button class="btn btn--info btn--sm" (click)="turnOnEditMode()" *ngIf="!editMode">Edit</button>
-                        <button class="btn btn--success btn--sm" *ngIf="editMode" (click)="getEditableData()">Update</button>
+                        <button class="btn btn--info btn--sm" (click)="openDialog(ticket._id)" *ngIf="!editMode">View</button>
+                       
                         <button class="btn btn--danger btn--sm" *ngIf="!editMode" (click)="deleteTicket(ticket._id)">Delete</button>
-                        <button class="btn btn--info btn--sm" *ngIf="editMode" (click)="turnOffEditMode()" >Cancel</button>
                     </div>
+
                 </td>
                 <input type="hidden" name="_id" [value] = "ticket._id">
             </tr>
-            <tr *ngIf="createMode" [class]="{createMode}">
-                <td class="text-center align-middle">
-                    <input type="checkbox" class="text-trinityBlue h-6 w-6">
-                </td>
-                <td class="cursor">
-                    <input type="text"  name="plumbername" placeholder="Name" >
-                </td>
-                <td class="cursor">
-                    <input type="email"  name="email" placeholder="Johndoe@mailme.com">
-                </td>
-                <td class="cursor">
-                    <input type="text"  name="status" placeholder="available">
-                </td>
-                <td class="cursor">
-                    <input type="tel"  name="phone" placeholder="555-555-5555">
-                </td>
-                <td>
-                    <div class="actions flex gap-2">
-
-                        <button class="btn btn--success btn--sm" *ngIf="createMode" (click)="getCreationData()">Submit</button>
-                        <button class="btn btn--danger btn--sm" *ngIf="createMode" (click)="turnOffCreationMode()">Cancel</button>
-                    </div>
-                </td>
-            </tr>
+           
         </tbody>
     </table>
 
