Place routing link in header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
   <!-- Navigation links for header -->
   <div class="main-nav">
     <ul class="nav-links">
-      <div class="link1"><li>HOME</li></div>
+      <div class="link1" routerLink="/products"><li>HOME</li></div>
       <div class="link2"><li>ABOUT</li></div>
       <div class="link3"><li>SERVICES</li></div>
       <div class="link4"><li>TESTIMONIALS</li></div>
