--- a/src/app/Pages/product-display/products-display.component.html
+++ b/src/app/Pages/product-display/products-display.component.html
@@ -1,50 +1,63 @@
-<!-- <section>
+<section>
     <table class="w-full">
         <thead>
             <tr>
-                <th>
-                    <button class="btn btn--danger">DELETE ALL</button>
-                </th>
-                <th>Plumber</th>
-                <th>Email Address</th>
-                <th>Status</th>
-                <th>Phone Number</th>
+                <th>Product</th>
+                <th>Category</th>
+                <th>Inventory</th>
+                <th>Rating</th>
+                <th>Price</th>
                 <th>Actions</th>
-                <th><button class="rounded-3xl h-10 w-10  bg-trinityBlue inline-flex items-center justify-center text-blue-900" title="Add a new plumber"><i class="fa-solid fa-plus"></i></button></th>
+                <th><button class="rounded-3xl h-10 w-10  bg-trinityBlue inline-flex items-center justify-center text-white" title="Add a new plumber" (click)="openDialog()"><i class="fa-solid fa-plus"></i></button></th>
             </tr>
         </thead>
         <tbody #editableForms>
-         -->
             <!-- Tells angular to add the class with same name once editMode is true -->
-
-<!--             
-            <tr [class]="{editMode}" *ngFor="let plumber of products">
-                <td class="text-center">
-                    <input type="checkbox" class="text-trinityBlue h-6 w-6">
+            <tr *ngFor="let product of products">
+                <td class="cursor">
+                    <div class="prod-name">
+                        <img src="{{product.image}}" alt="This is an alternate image of a product">
+                        <p>{{product.name}}</p>
+                    </div>
                 </td>
-                <td>
-                    <input type="text" [value]="plumber.plumbername" name="plumbername" [disabled]="!editMode" >
+                <td class="cursor">
+                    <p>{{product.category}}</p>
                 </td>
-                <td>
-                    <input type="email" [value]="plumber.email" name="email" [disabled]="!editMode">
+                <!-- <td class="cursor">
+                    <input type="text" [value]="product.plumber" name="plumber" >
+                </td> -->
+                <td class="cursor">
+                    <p>{{product.quantity}}</p>
                 </td>
-                <td>
-                    <input type="text" [value]="plumber.status" name="status" [disabled]="!editMode" >
+                <!-- <td class="cursor">
+                    <input type="tel" [value]="product.service" name="clientPhone" >
+                </td> -->
+                <td class="cursor w-[300px]">
+                    <p>{{product.rating}}</p>
                 </td>
-                <td>
-                    <input type="tel" [value]="plumber.phone" name="phone" [disabled]="!editMode">
+                <td class="cursor w-[300px]">
+                    <p>{{product.price}}</p>
                 </td>
                 <td>
                     <div class="actions flex gap-2">
-                        <button class="btn btn--info btn--sm" (click)="turnOnEditMode()" *ngIf="!editMode">Edit</button>
-                        <button class="btn btn--success btn--sm" *ngIf="editMode" (click)="getEditableData()">Update</button>
-                        <button class="btn btn--danger btn--sm" *ngIf="!editMode" (click)="deletePlumber(plumber._id)">Delete</button>
-                        <button class="btn btn--info btn--sm" *ngIf="editMode" (click)="turnOffEditMode()" >Cancel</button>
+                        <button class="btn btn--info btn--sm" (click)="openDialog(product._id)">View</button>
+                       
+                        <button class="btn btn--danger btn--sm" (click)="deleteProduct(product._id)">Delete</button>
                     </div>
+
                 </td>
-                <input type="hidden" name="_id" [value] = "plumber._id">
+                <input type="hidden" name="_id" [value] = "product._id">
+                <td>
+                    <div class="actions flex gap-2">
+                        <button class="btn btn--info btn--sm" (click)="openDialog(product._id)">View</button>
+                       
+                        <button class="btn btn--danger btn--sm"(click)="deleteProduct(product._id)">Delete</button>
+                    </div>
+
+                </td>
             </tr>
+           
         </tbody>
     </table>
 
-</section> -->
+</section>
