products by categories

--- a/src/app/Components/product-modal/product-modal.component.html
+++ b/src/app/Components/product-modal/product-modal.component.html
@@ -1,6 +1,6 @@
 <div class="grid grid-cols-2 gap-5 p-4">
     <div class="">
-        <img src="/assets/pngegg (81) 1.png" alt="" class=" h-[450px] object-fill">
+        <img src="http://localhost:3000/{{data.image}}" alt="" class=" h-[450px] object-contain">
     </div>
     
     <div class="h-full flex flex-col">
