--- a/src/app/Components/product-card/product-card.component.html
+++ b/src/app/Components/product-card/product-card.component.html
@@ -4,7 +4,7 @@
     (click)="openDialog(productsData)"
     >
         <div>
-            <img src="/assets/pngegg (81) 1.png" alt="">
+            <img src="http://localhost:3000/{{productsData.image}}" alt="">
         </div>
         <div class="text-center">
             <h1 class="text-xl font-bold text-[#005DA4] py-2">{{productsData.name}}</h1>
